[project]
name = "gradio-super-resolution"
version = "0.1.0"
description = "A brief description of your project"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Lorenzo Siconolfi", email = "siconolfi.lorenzo@gmail.com"}
]

dependencies = [
    "gradio>=5.49.1",
    "numpy==1.26.4",
    "pillow>=11.3.0",
    "torch==2.2.2", 
    "torchvision==0.17.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py312']

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

# Coverage configuration
[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]
